fix mainsidebar on mobile

--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -54,10 +54,10 @@
   
 }
 */
-
+/*
 .navbar-nav>.user-menu>.dropdown-menu>li.user-header{
   height:60px;
-}
+}*/
 
 #filter_form input, #filter_form textarea, #id_1-dbsnp_build, #id_1-read_depth, #id_1-variants_per_gene, #id_1-chr, #id_1-pos{
   width:80px;
@@ -107,18 +107,17 @@ vertical-align:middle;
 /*.table-nonfluid {
    width: auto;
 }*/
-ul.nav li.dropdown:hover ul.dropdown-menu{
+/*ul.nav li.dropdown:hover ul.dropdown-menu{
     display: block;    
-}
-ul.nav-tabs{
+}*/
+/*ul.nav-tabs{
   font-weight:bold;
   text-transform: uppercase;
-
-}
-
+}*/
+/*
 a.menu:after, .dropdown-toggle:after {
   content: none;
-}
+}*/
 #g1000-slider-range, #dbsnp-slider-range, #esp-slider-range, #sift-slider-range, #pp2-slider-range, #mendelmd-slider-range, #hi-slider-range, #cadd-slider-range, #mcap-slider-range, #ada-slider-range{
   width:240px;
   margin-top: 20px;
